Final fixes to the GUI